<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="#DCEEF6"
    android:id="@+id/reglayout"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">

    <RelativeLayout

        android:padding="25dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/back_login"
            android:textSize="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_baseline_arrow_back_ios_24"/>

        <ImageView
            android:id="@+id/log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:src="@drawable/inksfinal" />
       <!-- <TextView
            android:padding="3dp"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:fontFamily="sans-serif"
            android:layout_below="@+id/log"
            android:layout_centerHorizontal="true"
            android:id="@+id/welcome"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Register"/>
       -->
        <LinearLayout
            android:id="@+id/reg_data"
            android:layout_below="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/first_name_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_first_name"/>
            <EditText
                android:id="@+id/last_name_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background= "@drawable/edit_text"
                android:drawableLeft="@drawable/user"
                android:inputType="text"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_last_name"/>
            <EditText
                android:id="@+id/email_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_email_24"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_email"/>

            <EditText
                android:id="@+id/phone_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_phone_24"
                android:inputType="phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_phone"/>
            <EditText

                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="@string/edittext_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                />
            <TextView

                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_select_gender"/>
            <Spinner
                android:id="@+id/gender_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/gender"/>

            <TextView

                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_select_province"/>
            <Spinner
                android:id="@+id/province_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:entries="@array/province"/>
            <TextView
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_select_district"/>
            <Spinner
                android:id="@+id/district_edit"
                android:entries="@array/district"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
            <EditText
                android:id="@+id/street_number_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_location_on_24"
                android:imeOptions="actionNext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edittext_hint_kg"
                android:inputType="number"/>
            <TextView
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textview_poultry_size"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/poultry_w_edit"
                    android:layout_marginBottom="2dp"
                    android:padding="5dp"
                    android:background="@drawable/edit_text"
                    android:imeOptions="actionNext"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:hint="@string/edittext_hint_width"
                    android:inputType="number"/>
                <EditText
                    android:id="@+id/poultry_h_edit"
                    android:layout_marginBottom="2dp"
                    android:padding="5dp"
                    android:background="@drawable/edit_text"
                    android:imeOptions="actionNext"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:hint="@string/edittext_hint_height"
                    android:inputType="number"/>

            </LinearLayout>
            <EditText
                android:id="@+id/poultry_name_edit"
                android:layout_marginBottom="2dp"
                android:padding="5dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_add_home_work_24"
                android:inputType="text"
                android:imeOptions="actionDone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_poultry"/>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/reg_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_data"
            android:layout_marginBottom="2dp"
            android:background="@drawable/button"
            android:padding="5dp"
            android:text="Register"
            android:textColor="@color/white" />
        <!--  <TextView
             android:id="@+id/go_to_login_question"
             android:gravity="center_horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Already have an account?"
             android:layout_below="@+id/reg_save"/>

        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/go_to_login"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/go_to_login_question"
             android:background="@drawable/button_login"
             android:text="Login"
             android:textColor="@color/black" />-->

    </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>