<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="#DCEEF6"
    android:id="@+id/loglayout"
    xmlns:tools="http://schemas.android.com/tools">
    <ScrollView
        android:padding="10dp"
        android:background="#ededed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_gravity="center_horizontal|center_vertical"
            android:background="@drawable/login"
            android:padding="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView

                android:id="@+id/log"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:paddingBottom="20dp"
                android:src="@drawable/inksfinal" />
            <!-- <TextView
                 android:padding="3dp"
                 android:textColor="@color/black"
                 android:textSize="30sp"
                 android:fontFamily="sans-serif"
                 android:layout_below="@+id/log"
                 android:layout_centerHorizontal="true"
                 android:id="@+id/welcome"
                 android:textAlignment="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Register"/>
            -->
            <EditText
                android:id="@+id/username_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/log"
                android:layout_marginBottom="2dp"
                android:background="@drawable/edit_text"

                android:drawableLeft="@drawable/ic_baseline_account_circle_24"
                android:hint="@string/edittext_hint_first_name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:padding="5dp" />

            <EditText
                android:id="@+id/pass_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/username_login"
                android:layout_marginBottom="2dp"
                android:background="@drawable/edit_text"
                android:drawableLeft="@drawable/ic_baseline_lock_24"
                android:hint="@string/edittext_hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="5dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pass_login"
                android:alpha=".9"
                android:background="@drawable/button"
                android:padding="5dp"
                android:text="Login"
                android:textColor="@color/white" />
            <TextView
                android:padding="5dp"
                android:id="@+id/go_to_login_question"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edittext_hint_new"
                android:layout_below="@+id/log_button"/>

            <androidx.appcompat.widget.AppCompatButton
                android:padding="5dp"
                android:id="@+id/go_to_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/go_to_login_question"
                android:background="@drawable/button_login"
                android:text="CREATE ACCOUNT"
                android:textColor="@color/black" />

        </RelativeLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>